--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pyrogram==2.0.106
 tgcrypto
 requests
 pyromod
-aiohttp
+aiohttp>=3.8.0
 aiofiles
 asyncio
 humanize
@@ -13,3 +13,4 @@ bs4
 httpx[http2]
 img2pdf
 tglogging
+ffmpeg-python
