--- a/render.yaml
+++ b/render.yaml
@@ -1,21 +1,15 @@
 services:
   - type: web
     name: drm-bot-2
-    plan: free
-    env: docker
     runtime: docker
     dockerfilePath: Dockerfile
-    repo: https://github.com/NARUJAT/DRM-Bot-2
-    branch: main
-    autoDeploy: false
+    startCommand: "python3 -m main"
     envVars:
-      - key: BOT_TOKEN
-        sync: false
       - key: API_ID
         sync: false
       - key: API_HASH
         sync: false
-      #- key: WEBHOOK
-        #sync: false
-      - key: PORT
-        value: 8000  # Default port value, update if needed
+      - key: BOT_TOKEN
+        sync: false
+      - key: RENDER_EXTERNAL_HOSTNAME
+        sync: false
