--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,20 @@
 services:
   - type: web
-    name: drm-bot-2
-    runtime: docker
+    name: drm bot 2 
+    plan: free
+    env: docker
     dockerfilePath: Dockerfile
-    startCommand: "python3 -m main"
+    repo: https://github.com/NARUJAT/DRM-Bot-2
+    branch: main
+    autoDeploy: false
     envVars:
+      - key: BOT_TOKEN
+        sync: false
       - key: API_ID
         sync: false
       - key: API_HASH
         sync: false
-      - key: BOT_TOKEN
-        sync: false
-      - key: RENDER_EXTERNAL_HOSTNAME
-        sync: false
+      #- key: WEBHOOK
+        #sync: false
+      - key: PORT
+        value: 8000  # Default port value, update if needed
